--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,33 @@ body {
     text-wrap: balance;
   }
 }
+
+@font-face {
+  font-family: 'EF_jejudoldam';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2210-EF@1.0/EF_jejudoldam.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'establishRoomNo703OTF';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2112@1.0/establishRoomNo703OTF.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'KyoboHand';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/KyoboHand.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* 나머지 텍스트에 establishRoomNo703OTF 폰트 적용 */
+body {
+  font-family: 'establishRoomNo703OTF', sans-serif;
+}
+
+button {
+  font-family: 'KyoboHand', sans-serif;
+}
